@startuml

title __WEEK8-WEEK8_12.ONLINESHOP's Class Diagram__\n

  package  {
    class Main {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class Purchase {
    }
  }
  

  package  {
    class Purchase {
    }
  }
  

  package  {
    class Shop {
    }
  }
  

  package  {
    class Shop {
    }
  }
  

  package  {
    class ShoppingBasket {
    }
  }
  

  package  {
    class ShoppingBasket {
    }
  }
  

  package  {
    class Storehouse {
    }
  }
  

  package  {
    class Storehouse {
    }
  }
  

  Shop o-- Storehouse : store
  Shop o-- Storehouse : store


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
